--- a/storage/data.yml
+++ b/storage/data.yml
@@ -70,3 +70,10 @@ rating:
   :total_hints: 2
   :used_hints: 0
   :date: 2022-08-17
+- :name: Vlad
+  :difficulty: easy
+  :total_attempts: 15
+  :used_attempts: 1
+  :total_hints: 2
+  :used_hints: 0
+  :date: 2022-08-17
