--- a/spec/data.yml
+++ b/spec/data.yml
@@ -42,3 +42,10 @@ rating:
   :total_hints: 2
   :used_hints: 0
   :date: 2022-09-02
+- :name: Vlad
+  :difficulty: easy
+  :total_attempts: 15
+  :used_attempts: 1
+  :total_hints: 2
+  :used_hints: 0
+  :date: 2022-09-03
